<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ActivityLifeCycle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="activityA">Activity A</string>
    <string name="activityB">Activity B</string>
    <string name="thread_counter">Thread Counter:</string>
    <string name="startB">Start Activity B</string>
    <string name="dialog">Dialog</string>
    <string name="threadCount">0000</string>
    <string name="close">Close</string>
    <string name="title_activity_activity_b">ActivityB</string>
    <string name="finsihB">Finish B</string>

</resources>
