<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.activitylifecycle.MainActivity" >
    
    <LinearLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <ImageView
	        android:id="@+id/logoImageView"
	        android:layout_width="50dp"
	        android:layout_height="30dp"
	        android:layout_marginTop="10dp"
	        android:contentDescription="@string/logo"
	        android:src="@drawable/sjsu_logo" />

	    <TextView
	        android:id="@+id/ActivityATextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="60dp"
	        android:layout_marginTop="15dp"	        
	        android:textColor="@color/white"
	        android:textSize="20sp" 
	        android:text="@string/activityA" />
	    
    </LinearLayout>
    
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:layout_marginTop="20dp" >

         <Button
             android:id="@+id/startActivityBButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/startB" />

         <Button
             android:id="@+id/dialogButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/dialog" />

     </LinearLayout>
     
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/threadCounterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/thread_counter"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/threadCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/threadCount"
            android:textColor="@color/white"
            android:textSize="20sp" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20dp" >

         <Button
             android:id="@+id/closeButton"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="70dp"
             android:text="@string/close" />

     </LinearLayout>

</LinearLayout>
