<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.activitylifecycle.ActivityB" >
    
    <LinearLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <ImageView
	        android:id="@+id/logoImageView"
	        android:layout_width="50dp"
	        android:layout_height="30dp"
	        android:layout_marginTop="10dp"
	        android:contentDescription="@string/logo"
	        android:src="@drawable/sjsu_logo" />

	    <TextView
	        android:id="@+id/ActivityBTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="60dp"
	        android:layout_marginTop="15dp"	        
	        android:textColor="@color/white"
	        android:textSize="20sp" 
	        android:text="@string/activityB" />
	    
    </LinearLayout>
    
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:layout_marginTop="20dp" >

         <Button
             android:id="@+id/finishActivityBButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
             android:layout_weight="1"
             android:text="@string/finsihB" />

     </LinearLayout>

</LinearLayout>
